# fungai

./: .gitignore  LICENSE  README.md  publish.sh  pyproject.toml  requirements.txt  tool_example.py
examples/: fruits.py  tool_call.py
fungai/: __init__.py  llm_client.py  registry.py  task_decorator.py  tool_decorator.py  type_validator.py
