[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungai"
version = "0.1.0"
description = "LLM-powered function decorator with type enforcement"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nam Ngo", email = "namngology@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fungai"
Repository = "https://github.com/yourusername/fungai"